# Ash-Magnum-Pummels-and-Pulverizes-Every-Bloodsucker-in-Sight-Reducing-Them-to-Nothing-but-Dust

./: .gitattributes
godot/: .gitignore  Game.gdextension  bg.png.import  export_presets.cfg  icon.png.import  icon.svg.import  index.html  project.godot  wooden_stake.tscn
godot/assets/audio/: epic-metal-dubstep-cinematic-144716.mp3.import  hammer-of-witches-doom-metal-power-226459.mp3.import  metal-dark-matter-111451.mp3.import  metal-gear-136567.mp3.import  return-of-the-demon-slayer-8686.mp3.import
godot/assets/fonts/: Covenant5x5.ttf.import
godot/assets/sprites/: abilities.png.import  allies.png.import  cover.png.import  cursor.png.import  enemies.png.import  info-panel.png.import  items.png.import  obstacles.png.import  projectiles.png.import  shadows.png.import  spin.png.import  splash.png.import  sword.png.import  tileset.png.import  whip.png.import
godot/dialogue/characters/: alukrod.dch  ash-magnum.dch  big-batty.dch  mysterious-man.dch
godot/dialogue/styles/: basic.tres  no_portrait.tres
godot/dialogue/timelines/: entrance-hall-attack-manual.dtl  entrance-hall-big-batty-death.dtl  entrance-hall-big-batty.dtl  entrance-hall-defeat-bat.dtl  entrance-hall-movement-manual.dtl  entrance-hall-vampire-appears.dtl  great-hall-alukrod-intro.dtl  (+1 more)
godot/scenes/: ability_bar.tscn  audio_player.tscn  death.tscn  end.tscn  info_panel.tscn  intro.tscn  projectile.tscn  root.tscn
godot/scripts/: camera.gd  intro.gd  level.gd  player.gd  weapon.gd
rust/: Cargo.toml
rust/src/: ability.rs  death_screen.rs  dialogue.rs  level.rs  lib.rs  math.rs  traits.rs  ui.rs
(+25 files in other folders)
