[package]
name = "extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.1", features = ["experimental-godot-api"] }
itertools = "0.13"
num-integer = "0.1"
num-rational = "0.4"
strum = "0.26"
strum_macros = "0.26"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = true

